Fixing alignment classes

--- a/wp-content/themes/starter-theme/src/views/post-content/post-content.css
+++ b/wp-content/themes/starter-theme/src/views/post-content/post-content.css
@@ -1,3 +1,7 @@
 .post-content {
-  /* Add Styles */
+  & > *:not( .alignwide ):not( .alignfull ) {
+    max-width: var(--breakpoint-l) !important; /* Needed to override inline max-width created by WP on some elements like figure */
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
